@@ -14,6 +14,7 @@ on 'test' => sub {
   requires "Module::Metadata" => "0";
   requires "Scalar::Util" => "0";
   requires "Test::Deep" => "0";
+  requires "Test::Exception" => "0";
   requires "Test::More" => "0";
   requires "Test::Warnings" => "0";
 };
