@@ -10,9 +10,21 @@ my $path = which("uptime");
 plan skip_all => "no uptime found"
     unless $path && -x $path;
 
-use_ok 'Sys::CpuLoad', 'uptime';
+use_ok 'Sys::CpuLoad', 'uptime', 'load';
 
 my @load = uptime();
+
+cmp_deeply
+  \@load,
+  [ (code(\&looks_like_number)) x 3 ], 'load';
+
+diag "@load";
+
+no warnings 'once';
+
+$Sys::CpuLoad::LOAD = 'uptime';
+
+@load = load();
 
 cmp_deeply
   \@load,
